- fixed compilation issues with negate() function in intervalarith.c on exotic platforms
- gams writer now also substitutes $-sign from variable/equation names
- fixed bug in SCIPsortedvecDelPos...() templates
- fixed bug in heur_shiftandpropagate.c concerning the treatment of unbounded variables
- workaround for trying to add variable bounds with to small coefficients

parameters:
- changed parameter "propagating/pseudoobj/maxcands" to "propagating/pseudoobj/minuseless" (see prop_pseudoobj.c)
  due to revision of the pseudo objective propagator
- added parameters "heuristics/undercover/coverbd" and "heuristics/undercover/fixingorder"

SCIP version 2.1.0
==================

interface:

- new method SCIPstartSolvingTime() and SCIPstopSolvingTime() which can be used to start or stop the solving time clock
- new methods SCIPcheckCumulativeCondition(), SCIPpropCumulativeCondition, and SCIPrespropCumulativeCondition in
  cons_cumulative.h; these methods can be used to check, propagate, or resolve the propagation of a cumulative condition
- new methods SCIPstrToRealValue() and SCIPstrCopySection() in pub_misc.h; these methods can be used to convert a string
  into a SCIP_Real value and to copy a substring.
- the methods SCIPwriteVarName() SCIPwriteVarsList(), and SCIPwriteVarsLinearsum() have a new parameter named "type" of
  type SCIP_Bool which determines if the variable type should be written or not
- the methods SCIPparseVarName() and SCIPparseVarsList() got one new output parameter "endptr" which is filled with the
  position where the parsing stopped
- new functions SCIPround() and SCIPfeasRound() to round to nearest integer
- new functions SCIPcomputeVarCurrent{L,U}b{Local,Global}() to compute local or global lower or upper bounds of a
  multiaggregated variable from the bounds of the aggregation variables
- new method SCIPsetConsModifiable()
- new method SCIPgetNegatedVars() which returns all negated variables for a given array of variables, if the negated